--- a/styles.css
+++ b/styles.css
@@ -28,9 +28,20 @@ body{
     border-radius: 0.5rem;
     color: blueviolet;
 }
-.links-secondary{
-    color var(--primary-color);
-    border-radius: 0.5rem;
-    border: 1px solid var(--primary-color);
+.link{
+    text-decoration: none;
+    padding: 0.5rem 1rem;
+
 }
+.links-secondary{
+    background-color: var(--primary-color);
+    border-radius: 0.5rem;
+    color: blueviolet;
+}
+.list-non-bullet{
+    list-style: none;
+
+}
+
+    
 
