--- a/styles.css
+++ b/styles.css
@@ -1,55 +1,76 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,700;1,400&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap");
 
 :root {
-  --primary-color: blue;
-  --off-white: #e2e8f0;
-  
+  --primary-color: #7c3aed;
+  --off-white: #f3f4f6;
+  --dark-gray: #6b7280;
 }
 
 body {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
+  margin: 0px auto;
+  max-width: 85%;
+  width: 100%;
 }
 
-/* container */
-.container {
+hr {
+  margin: 2rem 0rem;
+}
 
+/** spaces **/
+
+.margin-md {
+  margin: 2rem;
+}
+
+/** container **/
+.container {
   padding: 0rem 1rem;
 }
 
 .container-center {
-  max-width: 600px;
+  max-width: 900px;
+  width: 100%;
   margin: auto;
 }
 
-
-/* links */
+/** links **/
 .link {
+  box-sizing: border-box;
   text-decoration: none;
   padding: 0.5rem 1rem;
 }
 
 .link-primary {
+  max-width: 140px;
+  padding: 0.6rem 1.2rem;
   background-color: var(--primary-color);
-  border-radius: 0.5rem;
-  color: blueviolet;
+  color: #fff;
+  margin: 1rem auto;
+  border-radius: 2rem;
 }
 
-.link {
-  text-decoration: none;
-  padding: 0.5rem 1rem;
-
+.link-secondary {
+  max-width: 140px;
+  margin: 1rem;
+  padding: 0.6rem 1.2rem;
+  border-radius: 2rem;
+  border: 1px solid var(--primary-color);
+  color: var(--primary-color);
 }
 
-.links-secondary {
-  background-color: var(--primary-color);
-  border-radius: 0.5rem;
-  color: blueviolet;
-}
+/** look into BEM naming convention for CSS **/
+
+/** lists **/
 
 .list-non-bullet {
   list-style: none;
+  padding-inline-start: 0px;
+}
 
+.list-item-inline {
+  display: inline;
+  padding: 0rem 0.5rem;
 }
 
 /** navigation **/
@@ -83,7 +104,6 @@ body {
   font-weight: bold;
 }
 
-
 /** header **/
 
 .hero {
@@ -92,8 +112,8 @@ body {
 }
 
 .hero .hero-img {
-  max-width: 80%;
-  width: 550px;
+  max-width: 60%;
+  width: 400px;
   display: block;
   margin: auto;
 }
@@ -108,26 +128,84 @@ body {
   color: var(--primary-color);
 }
 
-/* section */
+/** sections **/
 
-
-.section{
+.section {
   padding: 2rem;
+  margin: 2rem 0;
+  border-radius: 1rem;
+  text-align: center;
 }
+
 .section h1 {
   text-align: center;
- 
 }
-.ow{
+
+.ow {
   background-color: var(--off-white);
 }
-footer{
-  background-color: var(--off-white);
+
+/** footers **/
+
+.footer {
+  background-color: var(--primary-color);
   padding: 2rem 1rem;
   text-align: center;
-  color: wheat;
+  color: white;
   border-top-right-radius: 1rem;
 }
-.footer.link{
+
+.footer .link {
   color: white;
+}
+
+.footer .footer-header {
+  font-weight: bold;
+  font-size: large;
+}
+
+.footer ul {
+  padding-inline-start: 0px;
+}
+
+/** projects **/
+.showcase-list {
+  /* padding: 2rem; */
+  padding: 2rem;
+  border-radius: 1rem;
+  text-align: center;
+  margin: 3rem auto;
+}
+.showcase-list h1 {
+  margin: 0.5rem;
+}
+
+.showcase-list p {
+  padding-bottom: 1rem;
+}
+
+/** blogs **/
+
+.showcase-blog {
+  padding-bottom: 6rem;
+}
+
+@media (max-width: 900px) {
+  body {
+    max-width: 95%;
+    width: 100%;
+  }
+
+  .list-item-inline {
+    display: inline;
+    padding: 0rem;
+  }
+
+  .container-center {
+    width: auto;
+  }
+
+  .link-primary {
+    display: block;
+  }
 }
